add border hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
           <a href="#" class="gradient-underline">HOVER ME</a>
         </div>
         <div class="demo">
-          <h2>Something else</h2>
-          <a href="#" class="">HOVER ME</a>
-          <a href="#" class="underline">HOVER ME</a>
+          <h2>Border</h2>
+          <a href="#" class="text-border">HOVER ME</a>
+          <a href="#" class="text-border-slide">HOVER ME</a>
         </div>
       </section>
     </div>
